--- a/ProfitDistribution.Infrastructure/ProfitDistribution.Infrastructure.csproj
+++ b/ProfitDistribution.Infrastructure/ProfitDistribution.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,10 +6,6 @@
 
   <ItemGroup>
     <PackageReference Include="FireSharp" Version="2.0.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\src\ProfitDistribution.Domain\ProfitDistribution.Domain.csproj" />
   </ItemGroup>
 
 </Project>
