Added firebase configuration to appsetting.json

--- a/src/ProfitDistribution.Api/appsettings.json
+++ b/src/ProfitDistribution.Api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FirebaseConection": {
+    "AuthSecret": "WqwG9kisGWYpECo14cMnDzf0tH4raW5WWay6jOa4",
+    "BasePath": "https://profitdistribution-b317a-default-rtdb.firebaseio.com/"
+  }
 }
