Refactored Properties Domain

--- a/src/ProfitDistribution.Api/Properties/launchSettings.json
+++ b/src/ProfitDistribution.Api/Properties/launchSettings.json
@@ -12,14 +12,14 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "ProfitDistribution",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "ProfitDistribution.Api": {
       "commandName": "Project",
-      "launchUrl": "weatherforecast",
+      "launchUrl": "ProfitDistribution",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
