Added EmployeeServices and Refactored API

--- a/src/ProfitDistribution.Services/ProfitDistribution.Services.csproj
+++ b/src/ProfitDistribution.Services/ProfitDistribution.Services.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ProfitDistribution.Infrastructure\ProfitDistribution.Infrastructure.csproj" />
     <ProjectReference Include="..\ProfitDistribution.Domain\ProfitDistribution.Domain.csproj" />
   </ItemGroup>
 
