Added Minimal Salary injection

--- a/src/ProfitDistribution.Api/appsettings.json
+++ b/src/ProfitDistribution.Api/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "MinimalSalary": "1100,00",
   "FirebaseConection": {
     "AuthSecret": "WqwG9kisGWYpECo14cMnDzf0tH4raW5WWay6jOa4",
     "BasePath": "https://profitdistribution-b317a-default-rtdb.firebaseio.com/"
