--- a/src/ProfitDistribution.Services/ProfitDistribution.Services.csproj
+++ b/src/ProfitDistribution.Services/ProfitDistribution.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\ProfitDistribution.Infrastructure\ProfitDistribution.Infrastructure.csproj" />
     <ProjectReference Include="..\ProfitDistribution.Domain\ProfitDistribution.Domain.csproj" />
   </ItemGroup>
