Added Docker to tests

--- a/src/ProfitDistribution.Services/ProfitDistribution.Services.csproj
+++ b/src/ProfitDistribution.Services/ProfitDistribution.Services.csproj
@@ -9,8 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ProfitDistribution.Infrastructure\ProfitDistribution.Infrastructure.csproj" />
     <ProjectReference Include="..\ProfitDistribution.Domain\ProfitDistribution.Domain.csproj" />
+    <ProjectReference Include="..\ProfitDistribution.Infrastructure\ProfitDistribution.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
