--- a/src/ProfitDistribution.Api/Properties/launchSettings.json
+++ b/src/ProfitDistribution.Api/Properties/launchSettings.json
@@ -24,6 +24,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/ProfitDistribution",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
